// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Data Display/MLBadge Basic 1`] = `
<div
  class="badge-stories"
>
  <span
    class="ml-badge ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit current"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ml-badge ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="0"
    >
      0
    </sup>
  </span>
  <span
    class="ml-badge ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <span
      aria-label="clock-circle"
      class="anticon anticon-clock-circle ant-scroll-number-custom-component ml-icon ml-icon-outlined"
      role="img"
      style="color:#f5222d"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Storyshots Data Display/MLBadge Small Dot 1`] = `
<div
  class="badge-stories"
>
  <span
    class="ml-badge ant-badge"
  >
    <span
      aria-label="notification"
      class="anticon anticon-notification ml-icon ml-icon-outlined"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="notification"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.7c-3.7 11.6-5.7 23.9-5.7 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1zm496 58.4L318.8 611.3l-12.9-5.2H184V417.9h121.9l12.9-5.2L840 203.3v617.4z"
        />
      </svg>
    </span>
    <sup
      class="ant-scroll-number ant-badge-dot"
      data-show="true"
    />
  </span>
  <span
    class="ml-badge ant-badge"
  >
    <span
      aria-label="notification"
      class="anticon anticon-notification ml-icon ml-icon-outlined"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="notification"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.7c-3.7 11.6-5.7 23.9-5.7 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1zm496 58.4L318.8 611.3l-12.9-5.2H184V417.9h121.9l12.9-5.2L840 203.3v617.4z"
        />
      </svg>
    </span>
  </span>
  <span
    class="ml-badge ant-badge"
  >
    <a
      href="#"
    >
      Link something
    </a>
    <sup
      class="ant-scroll-number ant-badge-dot"
      data-show="true"
    />
  </span>
</div>
`;

exports[`Storyshots Data Display/MLBadge Standalone 1`] = `
<div
  class="badge-stories"
>
  <span
    class="ml-badge ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="25"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1200%);-webkit-transform:translateY(-1200%);transform:translateY(-1200%)"
      >
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit current"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
      </span>
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit current"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ml-badge site-badge-count-4 ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="4"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1400%);-webkit-transform:translateY(-1400%);transform:translateY(-1400%)"
      >
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit current"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          0
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          1
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          2
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          3
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          4
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          5
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          6
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          7
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          8
        </p>
        <p
          class="ant-scroll-number-only-unit"
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ml-badge site-badge-count-109 ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      style="background-color:#52c41a"
      title="109"
    >
      99+
    </sup>
  </span>
</div>
`;

exports[`Storyshots Data Display/MLBadge Status 1`] = `
<div>
  <span
    class="ml-badge ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ml-badge ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ml-badge ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ml-badge ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ml-badge ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <br />
  <span
    class="ml-badge ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
    <span
      class="ant-badge-status-text"
    >
      Success
    </span>
  </span>
  <br />
  <span
    class="ml-badge ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
    <span
      class="ant-badge-status-text"
    >
      Error
    </span>
  </span>
  <br />
  <span
    class="ml-badge ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
    <span
      class="ant-badge-status-text"
    >
      Default
    </span>
  </span>
  <br />
  <span
    class="ml-badge ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
    <span
      class="ant-badge-status-text"
    >
      Processing
    </span>
  </span>
  <br />
  <span
    class="ml-badge ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
    <span
      class="ant-badge-status-text"
    >
      Warning
    </span>
  </span>
</div>
`;
